improve link style

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ main {
 
 /* Links and Navigation */
 a {
-    color: #6c757d;
+    color: #3597ec;
     /* Dark gray primary color */
     text-decoration: none;
     /* No underline */
